// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`adding of tag entries adds tag entries: #mineable/axe content 1`] = `
{
  "replace": false,
  "values": [
    {
      "id": "create:brass_block",
      "required": false,
    },
    "minecraft:obsidian",
  ],
}
`;

exports[`adding of tag entries adds tag entries to custom registries: #example:something content 1`] = `
{
  "replace": false,
  "values": [
    "example:entry",
  ],
}
`;

exports[`removal of tag entries removes tag entries using id: #oak_logs content 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:oak_wood",
    "minecraft:stripped_oak_log",
    "minecraft:stripped_oak_wood",
  ],
}
`;

exports[`removal of tag entries removes tag entries using tag: modified #minable/axe 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:acacia_button",
    "minecraft:acacia_door",
    "minecraft:acacia_fence",
    "minecraft:acacia_fence_gate",
    "minecraft:acacia_hanging_sign",
    "minecraft:acacia_planks",
    "minecraft:acacia_pressure_plate",
    "minecraft:acacia_sapling",
    "minecraft:acacia_sign",
    "minecraft:acacia_slab",
    "minecraft:acacia_stairs",
    "minecraft:acacia_trapdoor",
    "minecraft:acacia_wall_hanging_sign",
    "minecraft:acacia_wall_sign",
    "minecraft:attached_melon_stem",
    "minecraft:attached_pumpkin_stem",
    "minecraft:azalea",
    "minecraft:bamboo",
    "minecraft:bamboo_block",
    "minecraft:bamboo_button",
    "minecraft:bamboo_door",
    "minecraft:bamboo_fence",
    "minecraft:bamboo_fence_gate",
    "minecraft:bamboo_hanging_sign",
    "minecraft:bamboo_mosaic",
    "minecraft:bamboo_mosaic_slab",
    "minecraft:bamboo_mosaic_stairs",
    "minecraft:bamboo_planks",
    "minecraft:bamboo_pressure_plate",
    "minecraft:bamboo_sign",
    "minecraft:bamboo_slab",
    "minecraft:bamboo_stairs",
    "minecraft:bamboo_trapdoor",
    "minecraft:bamboo_wall_hanging_sign",
    "minecraft:bamboo_wall_sign",
    "minecraft:barrel",
    "minecraft:bee_nest",
    "minecraft:beehive",
    "minecraft:beetroots",
    "minecraft:big_dripleaf",
    "minecraft:big_dripleaf_stem",
    "minecraft:birch_button",
    "minecraft:birch_door",
    "minecraft:birch_fence",
    "minecraft:birch_fence_gate",
    "minecraft:birch_hanging_sign",
    "minecraft:birch_planks",
    "minecraft:birch_pressure_plate",
    "minecraft:birch_sapling",
    "minecraft:birch_sign",
    "minecraft:birch_slab",
    "minecraft:birch_stairs",
    "minecraft:birch_trapdoor",
    "minecraft:birch_wall_hanging_sign",
    "minecraft:birch_wall_sign",
    "minecraft:black_banner",
    "minecraft:black_wall_banner",
    "minecraft:blue_banner",
    "minecraft:blue_wall_banner",
    "minecraft:bookshelf",
    "minecraft:brown_banner",
    "minecraft:brown_mushroom",
    "minecraft:brown_mushroom_block",
    "minecraft:brown_wall_banner",
    "minecraft:campfire",
    "minecraft:carrots",
    "minecraft:cartography_table",
    "minecraft:carved_pumpkin",
    "minecraft:cave_vines",
    "minecraft:cave_vines_plant",
    "minecraft:cherry_button",
    "minecraft:cherry_door",
    "minecraft:cherry_fence",
    "minecraft:cherry_fence_gate",
    "minecraft:cherry_hanging_sign",
    "minecraft:cherry_planks",
    "minecraft:cherry_pressure_plate",
    "minecraft:cherry_sapling",
    "minecraft:cherry_sign",
    "minecraft:cherry_slab",
    "minecraft:cherry_stairs",
    "minecraft:cherry_trapdoor",
    "minecraft:cherry_wall_hanging_sign",
    "minecraft:cherry_wall_sign",
    "minecraft:chest",
    "minecraft:chiseled_bookshelf",
    "minecraft:chorus_flower",
    "minecraft:chorus_plant",
    "minecraft:cocoa",
    "minecraft:composter",
    "minecraft:crafting_table",
    "minecraft:crimson_button",
    "minecraft:crimson_door",
    "minecraft:crimson_fence",
    "minecraft:crimson_fence_gate",
    "minecraft:crimson_fungus",
    "minecraft:crimson_hanging_sign",
    "minecraft:crimson_planks",
    "minecraft:crimson_pressure_plate",
    "minecraft:crimson_sign",
    "minecraft:crimson_slab",
    "minecraft:crimson_stairs",
    "minecraft:crimson_trapdoor",
    "minecraft:crimson_wall_hanging_sign",
    "minecraft:crimson_wall_sign",
    "minecraft:cyan_banner",
    "minecraft:cyan_wall_banner",
    "minecraft:dark_oak_button",
    "minecraft:dark_oak_door",
    "minecraft:dark_oak_fence",
    "minecraft:dark_oak_fence_gate",
    "minecraft:dark_oak_hanging_sign",
    "minecraft:dark_oak_planks",
    "minecraft:dark_oak_pressure_plate",
    "minecraft:dark_oak_sapling",
    "minecraft:dark_oak_sign",
    "minecraft:dark_oak_slab",
    "minecraft:dark_oak_stairs",
    "minecraft:dark_oak_trapdoor",
    "minecraft:dark_oak_wall_hanging_sign",
    "minecraft:dark_oak_wall_sign",
    "minecraft:daylight_detector",
    "minecraft:dead_bush",
    "minecraft:fern",
    "minecraft:fletching_table",
    "minecraft:flowering_azalea",
    "minecraft:glow_lichen",
    "minecraft:grass",
    "minecraft:gray_banner",
    "minecraft:gray_wall_banner",
    "minecraft:green_banner",
    "minecraft:green_wall_banner",
    "minecraft:hanging_roots",
    "minecraft:jack_o_lantern",
    "minecraft:jukebox",
    "minecraft:jungle_button",
    "minecraft:jungle_door",
    "minecraft:jungle_fence",
    "minecraft:jungle_fence_gate",
    "minecraft:jungle_hanging_sign",
    "minecraft:jungle_planks",
    "minecraft:jungle_pressure_plate",
    "minecraft:jungle_sapling",
    "minecraft:jungle_sign",
    "minecraft:jungle_slab",
    "minecraft:jungle_stairs",
    "minecraft:jungle_trapdoor",
    "minecraft:jungle_wall_hanging_sign",
    "minecraft:jungle_wall_sign",
    "minecraft:ladder",
    "minecraft:large_fern",
    "minecraft:lectern",
    "minecraft:light_blue_banner",
    "minecraft:light_blue_wall_banner",
    "minecraft:light_gray_banner",
    "minecraft:light_gray_wall_banner",
    "minecraft:lily_pad",
    "minecraft:lime_banner",
    "minecraft:lime_wall_banner",
    "minecraft:loom",
    "minecraft:magenta_banner",
    "minecraft:magenta_wall_banner",
    "minecraft:mangrove_button",
    "minecraft:mangrove_door",
    "minecraft:mangrove_fence",
    "minecraft:mangrove_fence_gate",
    "minecraft:mangrove_hanging_sign",
    "minecraft:mangrove_planks",
    "minecraft:mangrove_pressure_plate",
    "minecraft:mangrove_propagule",
    "minecraft:mangrove_roots",
    "minecraft:mangrove_sign",
    "minecraft:mangrove_slab",
    "minecraft:mangrove_stairs",
    "minecraft:mangrove_trapdoor",
    "minecraft:mangrove_wall_hanging_sign",
    "minecraft:mangrove_wall_sign",
    "minecraft:melon",
    "minecraft:melon_stem",
    "minecraft:mushroom_stem",
    "minecraft:nether_wart",
    "minecraft:note_block",
    "minecraft:oak_button",
    "minecraft:oak_door",
    "minecraft:oak_fence",
    "minecraft:oak_fence_gate",
    "minecraft:oak_hanging_sign",
    "minecraft:oak_planks",
    "minecraft:oak_pressure_plate",
    "minecraft:oak_sapling",
    "minecraft:oak_sign",
    "minecraft:oak_slab",
    "minecraft:oak_stairs",
    "minecraft:oak_trapdoor",
    "minecraft:oak_wall_hanging_sign",
    "minecraft:oak_wall_sign",
    "minecraft:orange_banner",
    "minecraft:orange_wall_banner",
    "minecraft:pink_banner",
    "minecraft:pink_wall_banner",
    "minecraft:potatoes",
    "minecraft:pumpkin",
    "minecraft:pumpkin_stem",
    "minecraft:purple_banner",
    "minecraft:purple_wall_banner",
    "minecraft:red_banner",
    "minecraft:red_mushroom",
    "minecraft:red_mushroom_block",
    "minecraft:red_wall_banner",
    "minecraft:scaffolding",
    "minecraft:small_dripleaf",
    "minecraft:smithing_table",
    "minecraft:soul_campfire",
    "minecraft:spore_blossom",
    "minecraft:spruce_button",
    "minecraft:spruce_door",
    "minecraft:spruce_fence",
    "minecraft:spruce_fence_gate",
    "minecraft:spruce_hanging_sign",
    "minecraft:spruce_planks",
    "minecraft:spruce_pressure_plate",
    "minecraft:spruce_sapling",
    "minecraft:spruce_sign",
    "minecraft:spruce_slab",
    "minecraft:spruce_stairs",
    "minecraft:spruce_trapdoor",
    "minecraft:spruce_wall_hanging_sign",
    "minecraft:spruce_wall_sign",
    "minecraft:stripped_bamboo_block",
    "minecraft:sugar_cane",
    "minecraft:sweet_berry_bush",
    "minecraft:tall_grass",
    "minecraft:trapped_chest",
    "minecraft:twisting_vines",
    "minecraft:twisting_vines_plant",
    "minecraft:vine",
    "minecraft:warped_button",
    "minecraft:warped_door",
    "minecraft:warped_fence",
    "minecraft:warped_fence_gate",
    "minecraft:warped_fungus",
    "minecraft:warped_hanging_sign",
    "minecraft:warped_planks",
    "minecraft:warped_pressure_plate",
    "minecraft:warped_sign",
    "minecraft:warped_slab",
    "minecraft:warped_stairs",
    "minecraft:warped_trapdoor",
    "minecraft:warped_wall_hanging_sign",
    "minecraft:warped_wall_sign",
    "minecraft:weeping_vines",
    "minecraft:weeping_vines_plant",
    "minecraft:wheat",
    "minecraft:white_banner",
    "minecraft:white_wall_banner",
    "minecraft:yellow_banner",
    "minecraft:yellow_wall_banner",
  ],
}
`;

exports[`removal of tag entries removes tag entries using tag: modified #guarded_by_piglins 1`] = `
{
  "replace": true,
  "values": [],
}
`;

exports[`removal of tag entries removes tag entries using regex: modified #birch_logs 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:birch_log",
    "minecraft:birch_wood",
  ],
}
`;

exports[`removal of tag entries removes tag entries using predicate: modified #guarded_by_piglins 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:barrel",
    "minecraft:black_shulker_box",
    "minecraft:blue_shulker_box",
    "minecraft:brown_shulker_box",
    "minecraft:chest",
    "minecraft:cyan_shulker_box",
    "minecraft:ender_chest",
    "minecraft:gilded_blackstone",
    "minecraft:gray_shulker_box",
    "minecraft:green_shulker_box",
    "minecraft:light_blue_shulker_box",
    "minecraft:light_gray_shulker_box",
    "minecraft:lime_shulker_box",
    "minecraft:magenta_shulker_box",
    "minecraft:orange_shulker_box",
    "minecraft:pink_shulker_box",
    "minecraft:purple_shulker_box",
    "minecraft:red_shulker_box",
    "minecraft:shulker_box",
    "minecraft:trapped_chest",
    "minecraft:white_shulker_box",
    "minecraft:yellow_shulker_box",
  ],
}
`;
